[package]
name = "qtpl"
version = "0.2.0"
authors = ["Naitik Shah <n@daaku.org>"]
edition = "2018"
description = "Templates inside your Rust code."
readme = "../readme.md"
repository = "https://github.com/daaku/qtpl"
keywords = ["macro", "template"]
categories = []
license = "MIT"

[dependencies]
qtpl-macros = { path = "../qtpl-macros" }
